# 2026elect

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
data/site/: expected_seats.json  manifest.json  no_call.json  races.json  seat_distribution.json
docs/: GUIDE.md  METHODOLOGY.md  PREREGISTRATION.md  ROADMAP.md
pipelines/: __init__.py  backfill.py  nightly.py
src/midterms26/: __init__.py  cli.py  context.py  dag.py  demo.py  logging.py  pipeline.py  stubs.py  warehouse.py
src/midterms26/backtest/: __init__.py  loco.py  metrics.py
src/midterms26/conformal/: __init__.py  abstain.py  aci.py  apply.py  cqr.py  mondrian.py  weighted.py
src/midterms26/features/: __init__.py  assemble.py  leakage.py
src/midterms26/geo/: __init__.py  reaggregate.py
src/midterms26/ingest/: __init__.py  acs.py  base.py  dime.py  econ.py  fec.py  fec_ie.py  normalize.py  plans.py  polls.py  pres_by_cd.py  ratings.py  results.py  specials.py
src/midterms26/models/: __init__.py  base.py  bayes.py  stack.py  tabpfn_member.py
src/midterms26/publish/: __init__.py  emit.py
src/midterms26/simulate/: __init__.py  copula.py
tests/: test_backfill_dryrun.py  test_backtest_metrics.py  test_conformal_aci.py  test_conformal_cqr.py  test_conformal_primitives.py  test_conformal_weighted.py  test_dag.py  test_ingest_fec.py  test_ingest_integration.py  test_ingest_misc.py  test_ingest_normalize.py  test_ingest_phase1b.py  test_ingest_results.py  test_ingest_specials.py  test_leakage.py  test_models_base.py  test_models_members.py  test_publish_emit.py  test_stack.py  test_warehouse.py
tests/fixtures/raw/acs/: acs_2023.csv
tests/fixtures/raw/dime/: dime_scores.csv
tests/fixtures/raw/econ/: unrate.csv
tests/fixtures/raw/fec/: receipts_r1.csv
tests/fixtures/raw/fec_ie/: schedule_e_2026.csv
tests/fixtures/raw/mit_edsl/: house_2018.csv  senate_2018.csv
tests/fixtures/raw/polls/: polls_2018.csv
tests/fixtures/raw/pres_by_cd/: pres_by_cd_pa.csv
tests/fixtures/raw/ratings/: ratings_2018.csv
tests/fixtures/raw/specials/: specials_2022.csv
